# chat-ollama

./: .coverage  .gitignore  AGENTS.md  Justfile  README.md  pyproject.toml
src/: app.py  ollama_utils.py
src/chat_ollama/: __init__.py  constants.py  db_manager.py
src/chat_ollama/frontend/: app.py  frontend_utils.py
tests/: test_db_manager.py  test_frontend_utils.py  test_ollama_utils.py
