[project]
name = "chat-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AdrianHagen", email = "adrian.hagen1@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "streamlit>=1.52.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
